--- a/shell/src/universal/notebooks/clustering.ipynb
+++ b/shell/src/universal/notebooks/clustering.ipynb
@@ -20,7 +20,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import $ivy.`com.github.haifengl::smile-scala:3.1.1`\n",
@@ -280,19 +282,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "val t48 = read.csv(\"../data/clustering/d4.txt\", header = false, delimiter = \"\\t\").toArray()\n",
-    "val clusters = dbscan(t48, 20, 10)\n",
-    "show(plot(t48, clusters.y, '.'))"
+    "val d4 = read.csv(\"../data/clustering/d4.txt\", header = false, delimiter = \"\\t\").toArray()\n",
+    "val clusters = dbscan(d4, 19, 0.1)\n",
+    "show(plot(d4, clusters.y, '.'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The chameleon is a set of complicated spatial data of arbitrary cluster shapes. With appropriate parameters, DBSCAN can discover the correct clusters and also identify outliers."
+    "With appropriate parameters, DBSCAN can discover the correct clusters and also identify outliers."
    ]
   },
   {
