--- a/shell/src/universal/notebooks/matrix.ipynb
+++ b/shell/src/universal/notebooks/matrix.ipynb
@@ -12,28 +12,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import $ivy.`com.github.haifengl::smile-scala:3.1.1`\n",
     "import $ivy.`org.slf4j:slf4j-simple:2.0.13` \n",
     "\n",
-    "import java.lang.Math._\n",
     "import smile.math._\n",
     "import smile.math.matrix._\n",
-    "import smile.math.MathEx._"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "2+3\n",
-    "log(2)\n",
-    "logistic(3.0)\n",
-    "choose(10, 3)"
+    "import smile.math.MathEx.{log2, sigmoid, factorial, lfactorial, choose, lchoose, random, randomInt, permutate, c, cbind, rbind, sum, mean, median, q1, q3, `var` => variance, sd, mad, min, max, whichMin, whichMax, unique, dot, distance, pdist, pdot, KullbackLeiblerDivergence => kld, JensenShannonDivergence => jsd, cov, cor, spearman, kendall, norm, norm1, norm2, normInf, standardize, normalize, scale, unitize, unitize1, unitize2}"
    ]
   },
   {
@@ -48,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "erf(1.0)\n",
@@ -131,25 +122,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val a = matrix(Array(\n",
+    "val a = Matrix.of(Array(\n",
     "        Array(0.7220180, 0.07121225, 0.6881997),\n",
     "        Array(-0.2648886, -0.89044952, 0.3700456),\n",
     "        Array(-0.6391588, 0.44947578, 0.6240573))\n",
     "    )\n",
     "\n",
-    "val b = matrix(Array(\n",
+    "val b = Matrix.of(Array(\n",
     "        Array(0.6881997, -0.07121225, 0.7220180),\n",
     "        Array(0.3700456, 0.89044952, -0.2648886),\n",
     "        Array(0.6240573, -0.44947578, -0.6391588))\n",
     "    )\n",
     "\n",
-    "val C = Array(\n",
+    "val c = Matrix.of(Array(\n",
     "        Array(0.9527204, -0.2973347, 0.06257778),\n",
     "        Array(-0.2808735, -0.9403636, -0.19190231),\n",
-    "        Array(0.1159052, 0.1652528, -0.97941688)\n",
-    "    )\n",
-    "\n",
-    "val c = ~C // or val c = matrix(C)"
+    "        Array(0.1159052, 0.1652528, -0.97941688))\n",
+    "    )"
    ]
   },
   {
@@ -275,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val a = matrix(Array(\n",
+    "val a = Matrix.of(Array(\n",
     "  Array(0.7220180, 0.07121225, 0.6881997),\n",
     "  Array(-0.2648886, -0.89044952, 0.3700456),\n",
     "  Array(-0.6391588, 0.44947578, 0.6240573))\n",
@@ -304,11 +293,11 @@
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".scala",
+   "file_extension": ".sc",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.1"
+   "version": "2.13.12"
   }
  },
  "nbformat": 4,
