--- a/shell/src/universal/notebooks/nlp.ipynb
+++ b/shell/src/universal/notebooks/nlp.ipynb
@@ -130,8 +130,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "porter(\"democratization\")\n",
-    "lancaster(\"democratization\")"
+    "porter.stem(\"democratization\")\n",
+    "lancaster.stem(\"democratization\")"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val lines = scala.io.Source.fromFile(\"../data/text/movie.txt\").getLines.toArray\n",
+    "val lines = scala.io.Source.fromFile(\"../data/text/movie.txt\").getLines().toArray\n",
     "val corpus = lines.map(_.bag())\n",
     "\n",
     "val features = Array(\"like\", \"good\", \"perform\", \"littl\", \"love\", \"bad\", \"best\")\n",
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val turing = scala.io.Source.fromFile(\"../data/text/turing.txt\").getLines.mkString\n",
+    "val turing = scala.io.Source.fromFile(\"../data/text/turing.txt\").mkString\n",
     "val phrase = ngram(4, 4, turing)\n",
     "phrase(2)\n",
     "phrase(3)"
@@ -273,7 +273,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "val sentence = \"\"\"When airport foreman Scott Babcock went out onto the runway at Wiley Post-Will Rogers Memorial Airport in Utqiagvik, Alaska, on Monday to clear some snow, he was surprised to find a visitor waiting for him on the asphalt: a 450-pound bearded seal chilling in the milky sunshine.\"\"\"\n",
@@ -281,6 +283,13 @@
     "sentence.postag\n",
     "postag(sentence.words(\"none\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -291,11 +300,11 @@
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".scala",
+   "file_extension": ".sc",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.1"
+   "version": "2.13.12"
   }
  },
  "nbformat": 4,
