--- a/shell/src/universal/notebooks/regression.ipynb
+++ b/shell/src/universal/notebooks/regression.ipynb
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.regression(10, x, y) { case (x, y) => svr(x, y, new GaussianKernel(0.06), 20, 10) }"
+    "cv.regression(10, x, y) { case (x, y) => svm(x, y, new GaussianKernel(0.06), 20, 10) }"
    ]
   },
   {
