--- a/shell/src/universal/notebooks/statistics.ipynb
+++ b/shell/src/universal/notebooks/statistics.ipynb
@@ -18,9 +18,8 @@
     "import $ivy.`com.github.haifengl::smile-scala:3.1.1`\n",
     "import $ivy.`org.slf4j:slf4j-simple:2.0.13` \n",
     "\n",
-    "import java.lang.Math._\n",
     "import smile.math._\n",
-    "import smile.math.MathEx._\n",
+    "import smile.math.MathEx.{log2, sigmoid, factorial, lfactorial, choose, lchoose, random, randomInt, permutate, c, cbind, rbind, sum, mean, median, q1, q3, `var` => variance, sd, mad, min, max, whichMin, whichMax, unique, dot, distance, pdist, pdot, KullbackLeiblerDivergence => kld, JensenShannonDivergence => jsd, cov, cor, spearman, kendall, norm, norm1, norm2, normInf, standardize, normalize, scale, unitize, unitize1, unitize2}\n",
     "import smile.stat._\n",
     "import smile.stat.distribution._"
    ]
@@ -447,7 +446,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "kendalltest(x, y)"
@@ -462,11 +463,11 @@
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".scala",
+   "file_extension": ".sc",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.1"
+   "version": "2.13.12"
   }
  },
  "nbformat": 4,
